# ProductReviewPipeline

./: .pre-commit-config.yaml  README.md  data.py  frame.py  hf.py  js.py  main.py  pyproject.toml
assets/: All_Beauty.jsonl
